@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns = "http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi = "http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation = "http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>vahy</groupId>
@@ -17,19 +17,19 @@
     </modules>
 
     <properties>
+        <java.version>13</java.version>
+        <logback.version>1.1.11</logback.version>
+        <slf4j.version>1.7.12</slf4j.version>
+        <junit.version>5.6.2</junit.version>
 
-        <maven.compiler.source>13</maven.compiler.source>
-        <maven.compiler.target>13</maven.compiler.target>
-        <maven.compiler.release>13</maven.compiler.release>
-        <!--        <argLine>&#45;&#45;enable-preview</argLine>-->
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
+        <maven.compiler.release>${java.version}</maven.compiler.release>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <checkstyle.config.path>${project.basedir}/build</checkstyle.config.path>
 
-        <logback.version>1.1.11</logback.version>
-        <slf4j.version>1.7.12</slf4j.version>
-        <junit.version>5.6.2</junit.version>
 
     </properties>
 
@@ -127,17 +127,17 @@
                         </excludes>
                     </configuration>
                 </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.8.0</version>
-                    <configuration>
-                        <source>13</source>
-                        <target>13</target>
-                        <release>13</release>
-                        <!--                        <compilerArgs>&#45;&#45;enable-preview</compilerArgs>-->
-                    </configuration>
-                </plugin>
+                <!--                <plugin>-->
+                <!--                    <groupId>org.apache.maven.plugins</groupId>-->
+                <!--                    <artifactId>maven-compiler-plugin</artifactId>-->
+                <!--                    <version>3.8.0</version>-->
+                <!--                    <configuration>-->
+                <!--                        <source>13</source>-->
+                <!--                        <target>13</target>-->
+                <!--                        <release>13</release>-->
+                <!--                        &lt;!&ndash;                        <compilerArgs>&#45;&#45;enable-preview</compilerArgs>&ndash;&gt;-->
+                <!--                    </configuration>-->
+                <!--                </plugin>-->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
@@ -153,11 +153,124 @@
                     <artifactId>maven-failsafe-plugin</artifactId>
                     <version>2.22.2</version>
                     <configuration>
-                        <argLine>
-                            --illegal-access=permit -XX:+UseParallelGC -server
-                        </argLine>
+                        <argLine>--illegal-access=permit -XX:+UseParallelGC -server</argLine>
                     </configuration>
                 </plugin>
+
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-checkstyle-plugin</artifactId>
+                    <version>3.0.0</version>
+                    <executions>
+                        <execution>
+                            <id>validate</id>
+                            <phase>validate</phase>
+                            <goals>
+                                <goal>check</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <configLocation>${checkstyle.config.path}/checkstyle.xml</configLocation>
+                        <propertyExpansion>checkstyle.config.path=${checkstyle.config.path}</propertyExpansion>
+                        <encoding>UTF-8</encoding>
+                        <consoleOutput>true</consoleOutput>
+                        <failOnViolation>true</failOnViolation>
+                        <violationSeverity>warning</violationSeverity>
+                        <includeTestSourceDirectory>true</includeTestSourceDirectory>
+                    </configuration>
+                </plugin>
+
+                <plugin>
+                    <version>3.1.12.2</version>
+                    <groupId>com.github.spotbugs</groupId>
+                    <artifactId>spotbugs-maven-plugin</artifactId>
+                    <configuration>
+                        <!--                    <excludeFilterFile>${project.basedir}/src/test/resources/findbugs-exclude.xml</excludeFilterFile>-->
+                        <effort>Max</effort>
+                        <threshold>Low</threshold>
+                        <xmlOutput>true</xmlOutput>
+                        <spotbugsXmlOutputDirectory>${project.build.directory}/findbugs</spotbugsXmlOutputDirectory>
+                        <!--
+                            NullAway checks NPE's;
+                            FindUncalledPrivateMethods is broken
+                        -->
+<!--                        <omitVisitors>FindNullDeref,InitializeNonnullFieldsInConstructor,CheckRelaxingNullnessAnnotation,LoadOfKnownNullValue,FindUncalledPrivateMethods</omitVisitors>-->
+                    </configuration>
+                    <executions>
+                        <execution>
+                            <id>analyze-compile</id>
+                            <phase>compile</phase>
+                            <goals>
+                                <goal>check</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.8.0</version>
+                    <configuration combine.self="append">
+
+                        <source>${java.version}</source>
+                        <target>${java.version}</target>
+                        <release>${java.version}</release>
+                        <compilerArgs combine.self="override">
+                            <arg>-Werror</arg>
+                            <arg>-Xlint:all,-fallthrough,-processing,-serial,-classfile,-path</arg>
+                            <arg>-parameters</arg>
+                            <arg>-XDcompilePolicy=simple</arg>
+                            <arg>-J--illegal-access=debug</arg>
+                            <arg>-J--add-opens=java.base/java.lang=ALL-UNNAMED</arg>
+                            <arg>-J--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</arg>
+                            <arg>-J--add-opens=java.base/javax.crypto=ALL-UNNAMED</arg>
+                            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+                            <arg>-Xplugin:ErrorProne
+                                -XepOpt:Immutable:KnownImmutable=javax.money.CurrencyUnit
+                                -XepDisableWarningsInGeneratedCode
+                                -Xep:ConstantField:WARN
+                                -Xep:ClassName:WARN
+                                -Xep:DivZero:WARN
+                                -Xep:EmptyIf:WARN
+                                -Xep:IterablePathParameter:WARN
+                                -Xep:LongLiteralLowerCaseSuffix:WARN
+                                -Xep:AnnotationPosition:WARN
+                                -Xep:EmptyTopLevelDeclaration:WARN
+                                -Xep:EqualsBrokenForNull:WARN
+                                -Xep:FunctionalInterfaceClash:WARN
+                                -Xep:InvalidInlineTag:WARN
+                                -Xep:InvalidParam:WARN
+                                -Xep:MissingDefault:WARN
+                                -Xep:NonCanonicalStaticMemberImport:WARN
+                                -Xep:PrimitiveArrayPassedToVarargsMethod:WARN
+                                -Xep:RedundantOverride:WARN
+                                -Xep:RedundantThrows:WARN
+                                -Xep:StaticQualifiedUsingExpression:WARN
+                                -Xep:StringEquality:WARN
+                                -Xep:UnusedException:WARN
+                                -Xep:ConstantField:WARN
+                                -Xep:MultiVariableDeclaration:WARN
+                                -Xep:MultipleTopLevelClasses:WARN
+                                -Xep:MultipleUnaryOperatorsInMethodCall:WARN
+                                -Xep:PrivateConstructorForUtilityClass:WARN
+                                -Xep:UngroupedOverloads:WARN
+                            </arg>
+                        </compilerArgs>
+                        <annotationProcessorPaths combine.self="append">
+                            <path>
+                                <groupId>com.google.errorprone</groupId>
+                                <artifactId>error_prone_core</artifactId>
+                                <version>2.3.4</version>
+                            </path>
+                        </annotationProcessorPaths>
+                        <showWarnings>true</showWarnings>
+
+                    </configuration>
+                </plugin>
+
+
             </plugins>
         </pluginManagement>
     </build>
